# coala-bears

./: .coafile  .codecov.yml  .gitattributes  .gitignore  .moban.yaml  .nocover.yaml  .rultor.yml  .travis.yml  =0.11.0.dev20170322155718  Fudgefile  Gemfile  ISSUE_TEMPLATE.md  MANIFEST.in  M_A  Makefile.PL  README.rst  RELEASE_NOTES.rst  bear-languages.yaml  bear-metadata.yaml  bear-requirements.txt  bear-requirements.yaml  circle.yml  coala-bears.cabal  commit.txt  commit1  composer.json  docs-requirements.txt  file1.txt  file2.txt  ignore.txt  mytestfile.txt  n  nano.save  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  shard.yml  test-requirements.txt  (+1 more)
.ci/: Export-NUnitXml.psm1  Gemfile.jinja2  PSLint.ps1  PSScriptAnalyzerSettings.psd1  appveyor.yml  bears.dirs.prune.sh  bears.prune.sh  buildci.sh  check_moban.sh  check_setuptools.py  check_unsupported.sh  choco.config  constants.ps1  deploy.coverage.sh  deploy.pypi.sh  deps.ActivePerl-packages.ps1  deps.ActivePerl.ps1  deps.alex.sh  deps.apt-new.sh  deps.apt.sh  deps.apt_get.sh  deps.cabal.sh  deps.coala-bears.sh  deps.composer-packages.ps1  deps.composer.sh  deps.elm.sh  deps.flawfinder.sh  deps.generic.sh  deps.ghc-mod.sh  deps.ghc-packages.ps1  deps.go.sh  deps.golang-packages.ps1  deps.golang.ps1  deps.infer.sh  deps.java.sh  deps.julia.jl  deps.julia.sh  deps.lua.sh  deps.minimal.sh  deps.nltk.cmd  (+41 more)
.circleci/: config.yml
.misc/: deps.sh  tests.sh
.moban.dt/: DESCRIPTION.jj2  Description.jj2  Gemfile.jj2  bear-requirements.txt.jj2  bears-appveyor.yml.jj2  bears-gitignore.jj2  (+10 more)
(+1210 files in other folders)
